# TurboOCR-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/cli/: index.html
0.1.0/api/clients/: index.html
0.1.0/api/errors/: index.html
0.1.0/api/grpc/: index.html
0.1.0/api/layout/: index.html
0.1.0/api/markdown/: index.html
0.1.0/api/models/: index.html
0.1.0/api/retry/: index.html
0.1.0/api/searchable_pdf/: index.html
0.1.0/examples/: index.html
0.1.0/explanation/: index.html
0.1.0/explanation/http_vs_grpc/: index.html
0.1.0/explanation/layout_and_reading_order/: index.html
0.1.0/explanation/searchable_pdf_internals/: index.html
0.1.0/how-tos/: index.html
0.1.0/how-tos/batch_with_partial_failures/: index.html
0.1.0/how-tos/configure_retries/: index.html
0.1.0/how-tos/handle_non_latin_pdfs/: index.html
0.1.0/how-tos/use_custom_httpx_client/: index.html
0.1.0/tutorials/: index.html
0.1.0/tutorials/01_first_pdf_to_markdown/: index.html
0.1.0/tutorials/02_async_folder_pipeline/: index.html
0.2.0/: index.html  mkdocs.yml  objects.inv  sitemap.xml
0.2.0/api/cli/: index.html
0.2.0/api/clients/: index.html
0.2.0/api/errors/: index.html
0.2.0/api/grpc/: index.html
0.2.0/api/layout/: index.html
0.2.0/api/markdown/: index.html
0.2.0/api/models/: index.html
0.2.0/api/retry/: index.html
0.2.0/api/searchable_pdf/: index.html
0.2.0/examples/: index.html
0.2.0/explanation/http_vs_grpc/: index.html
0.2.0/explanation/searchable_pdf_internals/: index.html
0.2.0/how-tos/batch_with_partial_failures/: index.html
0.2.0/how-tos/folder_pipeline/: index.html
0.2.0/how-tos/handle_non_latin_pdfs/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/api/clients/: index.html
0.3.0/api/errors/: index.html
0.3.0/api/grpc/: index.html
0.3.0/api/layout/: index.html
0.3.0/api/models/: index.html
0.3.0/explanation/: index.html
0.3.0/explanation/layout_and_reading_order/: index.html
0.3.0/how-tos/: index.html
0.3.0/how-tos/configure_retries/: index.html
0.3.0/how-tos/use_custom_httpx_client/: index.html
0.3.0/search/: search_index.json
0.3.0/tutorials/: index.html
0.3.0/tutorials/01_first_pdf_to_markdown/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/cli/: index.html
dev/api/clients/: index.html
dev/api/errors/: index.html
dev/api/grpc/: index.html
dev/api/layout/: index.html
dev/api/markdown/: index.html
dev/api/models/: index.html
dev/api/retry/: index.html
dev/api/searchable_pdf/: index.html
dev/examples/: index.html
dev/explanation/: index.html
dev/explanation/http_vs_grpc/: index.html
dev/explanation/layout_and_reading_order/: index.html
dev/explanation/searchable_pdf_internals/: index.html
dev/how-tos/: index.html
dev/how-tos/batch_with_partial_failures/: index.html
dev/how-tos/configure_retries/: index.html
dev/how-tos/handle_non_latin_pdfs/: index.html
dev/how-tos/use_custom_httpx_client/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
dev/tutorials/01_first_pdf_to_markdown/: index.html
dev/tutorials/02_async_folder_pipeline/: index.html
docs/: examples.md  index.md  mkdocs.yml
docs/api/: cli.md  clients.md  errors.md  grpc.md  layout.md  markdown.md  models.md  retry.md  searchable_pdf.md
docs/explanation/: http_vs_grpc.md  index.md  layout_and_reading_order.md  searchable_pdf_internals.md
docs/how-tos/: batch_with_partial_failures.md  configure_retries.md  folder_pipeline.md  handle_non_latin_pdfs.md  index.md  use_custom_httpx_client.md
docs/tutorials/: 01_first_pdf_to_markdown.md  02_async_folder_pipeline.md  index.md
examples/: 00_quickstart.py  01_image_ocr_with_layout.py  02_pdf_to_markdown.py  03_searchable_pdf.py  04_async_client.py  05_batch.py  06_grpc.py  07_retry_and_timeout.py  08_custom_httpx_client.py  09_markdown_style.py  10_tables_and_formulas.py  11_folder_pipeline.py  12_hooks_and_logging.py  13_capabilities_and_streaming.py  README.md
examples/sample/: generate.py
scripts/: generate_glyphless_font.py
src/turboocr/: __init__.py  cli.py  errors.py  models.py  searchable_pdf.py
src/turboocr/_core/: auth.py  content.py  env.py  ids.py  options.py  retry.py
src/turboocr/_grpc/: __init__.py  channel.py  client.py  errors.py  metadata.py  parse.py  requests.py  retry.py
src/turboocr/_http/: _kwargs.py  client.py  (+3 more)
tests/: test_client.py  test_markdown.py  test_models.py  test_production_features.py  test_retry_and_errors.py  test_searchable_pdf.py  test_v3_api.py
tests/_grpc/: conftest.py  test_client.py  test_errors.py  test_metadata.py  test_parse.py  test_retry.py
tests/integration/: conftest.py  test_full_api.py  test_smoke.py
(+7 files in other folders)
